--- a/src/dtt/CMakeLists.txt
+++ b/src/dtt/CMakeLists.txt
@@ -6,6 +6,6 @@ set(
 set(
         DTT_IMPL_SOURCE
         impl/role.cpp
-)
+        member_manager.cpp)
 
 add_library(dtt SHARED ${DTT_SOURCE} ${DTT_IMPL_SOURCE})
