--- a/src/dtt/CMakeLists.txt
+++ b/src/dtt/CMakeLists.txt
@@ -1,11 +1,12 @@
 set(
         DTT_SOURCE
         member.cpp
-)
+        role_manager.cpp
+        member_manager.cpp)
 
 set(
         DTT_IMPL_SOURCE
         impl/role.cpp
-        member_manager.cpp)
+        )
 
 add_library(dtt SHARED ${DTT_SOURCE} ${DTT_IMPL_SOURCE})
