--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 *.exe
 *.out
 *.app
+bin/*
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
