--- a/src/ndtt/CMakeLists.txt
+++ b/src/ndtt/CMakeLists.txt
@@ -5,7 +5,7 @@ set(NDTT_IMPL_SOURCES
         impl/window.cpp)
 
 set(NDTT_SOURCES
-        main.cpp main_window.cpp titlebar.cpp)
+        main.cpp main_window.cpp titlebar.cpp memberlist_view.cpp)
 
 add_executable(ndtt ${NDTT_SOURCES} ${NDTT_IMPL_SOURCES})
 
