--- a/src/ndtt/CMakeLists.txt
+++ b/src/ndtt/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIRS})
 
 set(NDTT_IMPL_SOURCES
-        impl/window.cpp)
+        impl/window.cpp impl/list_view.cpp)
 
 set(NDTT_SOURCES
         main.cpp main_window.cpp titlebar.cpp memberlist_view.cpp)
